<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Nome"
        android:inputType="textPersonName" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Especie" />

        <RadioButton
            android:id="@+id/rdodog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Cachorro" />

        <RadioButton
            android:id="@+id/rdocat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Gato" />

        <RadioButton
            android:id="@+id/rdorabit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Coelho" />

        <RadioButton
            android:id="@+id/rdoham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Hamster" />

    </RadioGroup>

    <ToggleButton
        android:id="@+id/TglCast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="@string/NCastrado"
        android:textOn="@string/Castrado" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Registrar"
        android:onClick="Registro" />

</LinearLayout>